--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -254,63 +254,30 @@ microbenchmark(
 ## OrderedDict
 
 ```{r, echo = FALSE}
-test_base_ordered_dict_set_get <- function(n) {
-    h <- list()
-    for (i in 1:n) h[[as.character(i)]] = rnorm(1)
-    for (i in 1:n) h[[as.character(i)]]
+test_collections_ordered_dict_array_set_get <- function(n) {
+    h <- collections::OrderedDict$new(backend = "array")
+    for (i in 1:n) h$set(as.character(i), rnorm(1))
+    for (i in sample(1:n)) h$get(as.character(i))
     h
 }
 test_collections_ordered_dict_set_get <- function(n) {
-    h <- collections::Dict$new()
+    h <- collections::OrderedDict$new()
     for (i in 1:n) h$set(as.character(i), rnorm(1))
-    for (i in 1:n) h$get(as.character(i))
+    for (i in sample(1:n)) h$get(as.character(i))
     h
 }
 ```
 
 ```{r}
 microbenchmark(
-    base = test_base_ordered_dict_set_get(100),
     collections = test_collections_ordered_dict_set_get(100),
+    collections_array = test_collections_ordered_dict_array_set_get(100),
     times = 10,
     unit = "relative"
 )
 microbenchmark(
-    base = test_base_ordered_dict_set_get(10000),
-    collections = test_collections_ordered_dict_set_get(10000),
-    times = 10,
-    unit = "relative"
-)
-```
-
-```{r}
-test_base_ordered_dict_set_remove <- function(n) {
-    h <- list()
-    for (i in 1:n) h[[as.character(i)]] <- rnorm(1)
-    for (i in sample(1:n)) {
-        h <- h[names(h) != as.character(i)]
-    }
-    h
-}
-test_collections_ordered_dict_set_remove <- function(n) {
-    h <- collections::Dict$new()
-    for (i in 1:n) h$set(as.character(i), rnorm(1))
-    for (i in sample(1:n)) h$remove(as.character(i))
-    h
-}
-
-```
-
-```{r}
-microbenchmark(
-    base = test_base_ordered_dict_set_remove(100),
-    collections = test_collections_ordered_dict_set_remove(100),
-    times = 10,
-    unit = "relative"
-)
-microbenchmark(
-    base = test_base_ordered_dict_set_remove(10000),
-    collections = test_collections_ordered_dict_set_remove(10000),
+    collections = test_collections_ordered_dict_set_get(1000),
+    collections_array = test_collections_ordered_dict_array_set_get(1000),
     times = 10,
     unit = "relative"
 )
