--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -254,8 +254,8 @@ microbenchmark(
 ## OrderedDict
 
 ```{r, echo = FALSE}
-test_collections_ordered_dict_array_set_get <- function(n) {
-    h <- collections::OrderedDict$new(backend = "array")
+test_collections_naive_ordered_dict_set_get <- function(n) {
+    h <- collections::NaiveOrderedDict$new()
     for (i in 1:n) h$set(as.character(i), rnorm(1))
     for (i in sample(1:n)) h$get(as.character(i))
     h
@@ -271,13 +271,13 @@ test_collections_ordered_dict_set_get <- function(n) {
 ```{r}
 microbenchmark(
     collections = test_collections_ordered_dict_set_get(100),
-    collections_array = test_collections_ordered_dict_array_set_get(100),
+    collections_array = test_collections_naive_ordered_dict_set_get(100),
     times = 10,
     unit = "relative"
 )
 microbenchmark(
     collections = test_collections_ordered_dict_set_get(1000),
-    collections_array = test_collections_ordered_dict_array_set_get(1000),
+    collections_array = test_collections_naive_ordered_dict_set_get(1000),
     times = 10,
     unit = "relative"
 )
