fix deque code and update docs

--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -12,11 +12,11 @@ See [benchmark.Rmd](https://github.com/randy3k/collections/blob/master/vignettes
 
 We are comparing these packages with `collections`.
 
-- [dequer](https://CRAN.R-project.org/package=dequer) 
+- [dequer](https://CRAN.R-project.org/package=dequer)
     `r packageDescription("dequer")$Version`
-- [datastructures ](https://CRAN.R-project.org/package=datastructures ) 
+- [datastructures ](https://CRAN.R-project.org/package=datastructures )
     `r packageDescription("datastructures")$Version`
-- [liqueueR](https://CRAN.R-project.org/package=liqueueR) 
+- [liqueueR](https://CRAN.R-project.org/package=liqueueR)
     `r packageDescription("liqueueR")$Version`
 - [hash](https://CRAN.R-project.org/package=hash)
     `r packageDescription("hash")$Version`
@@ -47,7 +47,7 @@ test_dequer_queue_push_pop <- function(n) {
     q
 }
 test_datastructures_queue_push_pop <- function(n) {
-    q <- datastructures::queue("numeric")
+    q <- datastructures::queue()
     insert <- datastructures::insert
     pop <- datastructures::pop
     for (i in 1:n) insert(q, rnorm(1))
@@ -78,7 +78,7 @@ microbenchmark(
     unit = "relative"
 )
 microbenchmark(
-    base = test_base_queue_push_pop(100),
+    base = test_base_queue_push_pop(1000),
     dequer = test_dequer_queue_push_pop(1000),
     collections = test_collections_queue_push_pop(1000),
     unit = "relative"
@@ -98,7 +98,7 @@ test_dequer_stack_push_pop <- function(n) {
     q
 }
 test_datastructures_stack_push_pop <- function(n) {
-    q <- datastructures::stack("numeric")
+    q <- datastructures::stack()
     insert <- datastructures::insert
     pop <- datastructures::pop
     for (i in 1:n) insert(q, rnorm(1))
@@ -184,7 +184,7 @@ test_liqueueR_pqueue_push_pop <- function(n) {
 }
 
 test_datastructures_pqueue_push_pop <- function(n) {
-    q <- datastructures::binomial_heap("integer", "numeric")
+    q <- datastructures::binomial_heap(key.class = "integer")
     insert <- datastructures::insert
     pop <- datastructures::pop
     for (i in 1:n) insert(q, sample.int(n, 1), rnorm(1))
@@ -214,7 +214,7 @@ microbenchmark(
 
 ```{r, echo = FALSE}
 test_datastructures_dict_set_get <- function(n) {
-    h <- datastructures::hashmap("character", "numeric")
+    h <- datastructures::hashmap()
     insert <- datastructures::insert
     get <- datastructures::get
     for (i in 1:n) insert(h, as.character(i), rnorm(1))
@@ -270,12 +270,12 @@ test_collections_ordered_dict_set_get <- function(n) {
 
 ```{r}
 microbenchmark(
-    base = test_collections_naive_ordered_dict_set_get(100),
+    base = test_base_ordered_dict_set_get(100),
     collections = test_collections_ordered_dict_set_get(100),
     unit = "relative"
 )
 microbenchmark(
-    base = test_collections_naive_ordered_dict_set_get(1000),
+    base = test_base_ordered_dict_set_get(1000),
     collections = test_collections_ordered_dict_set_get(1000),
     unit = "relative"
 )
