--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ cat(d$Description)
 
 [dequer](https://CRAN.R-project.org/package=dequer) implements double ended queues and it supports arbitary R objects. However, it uses `R_PreserveObject` and `R_ReleaseObject` heavily which could be an issue for long queues.
 
-[datastructures](https://CRAN.R-project.org/package=datastructures) uses 'Boost' and 'STL' data types to implement queues and hashmaps. It only supports atomic vectors.
+[datastructures](https://CRAN.R-project.org/package=datastructures) uses 'Boost' and 'STL' data types to implement queues and hashmaps.
 
 [liqueueR](https://CRAN.R-project.org/package=liqueueR) implements queues using R lists.
 
