add a note in benchmark

--- a/vignettes/benchmark.Rmd
+++ b/vignettes/benchmark.Rmd
@@ -300,3 +300,5 @@ tm <- microbenchmark(
 )
 autoplot(tm) + ggtitle("set and get 100 times")
 ```
+
+Remark: `collections::OrderedDict` would outperform `collections::OrderedDictL` if there are more than hundreds of items.
